[gd_scene load_steps=20 format=3 uid="uid://ddo2yudkaj10v"]

[ext_resource type="Shader" uid="uid://dri3mi0a32658" path="res://objects/pause_menu/canvas_blur_shader.gdshader" id="1_ei3qn"]
[ext_resource type="Script" uid="uid://dfwjppf3fwupi" path="res://objects/player/ui/lose_menu.gd" id="1_qgeyt"]
[ext_resource type="Shader" uid="uid://gc03x7kb6le6" path="res://objects/player/ui/lose_menu.gdshader" id="2_f8mko"]
[ext_resource type="FontFile" uid="uid://cup2yr5w7or1l" path="res://fonts/Minnie.TTF" id="2_qu0um"]
[ext_resource type="Texture2D" uid="uid://p82unmxrapek" path="res://ui_assets/player_ui/laff_meter/LM_frown.png" id="3_2odix"]
[ext_resource type="PackedScene" uid="uid://3wpuwo50gkt" path="res://objects/player/ui/item_display.tscn" id="3_7bjh0"]
[ext_resource type="PackedScene" uid="uid://bwnrw7jcf01kq" path="res://objects/general_ui/node_viewer/node_viewer.tscn" id="4_7ldo3"]
[ext_resource type="PackedScene" uid="uid://b0d1er4oqiqcn" path="res://objects/general_ui/general_button/general_button.tscn" id="5_r1k5q"]
[ext_resource type="Shader" uid="uid://ryrnfqn0ixe5" path="res://scenes/title_screen/hue_shift.gdshader" id="6_3v657"]
[ext_resource type="Texture2D" uid="uid://ddcktpjy3gdew" path="res://ui_assets/misc/uiAccessoryDelete_up.png" id="7_n78l6"]
[ext_resource type="Texture2D" uid="uid://b7ri5sq021cvo" path="res://ui_assets/misc/uiAccessoryDelete_down.png" id="8_h5jcy"]
[ext_resource type="Texture2D" uid="uid://dn8vndd37lqom" path="res://ui_assets/misc/uiAccessoryDelete_rollover.png" id="9_b6wx8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s822u"]
shader = ExtResource("1_ei3qn")
shader_parameter/strength = 10.0
shader_parameter/sample_power = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onoh3"]
shader = ExtResource("2_f8mko")
shader_parameter/motion = Vector2(-20, -20)
shader_parameter/scale = 2.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/alpha = 0.2

[sub_resource type="LabelSettings" id="LabelSettings_aen5p"]
font = ExtResource("2_qu0um")
font_size = 48
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rhk66"]
font = ExtResource("2_qu0um")
font_size = 24
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vmbai"]
font = ExtResource("2_qu0um")
font_size = 32
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_7le1w"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cgcah"]
shader = ExtResource("6_3v657")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[node name="LoseMenu" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_qgeyt")

[node name="Root" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="ColorRect" parent="Root"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_s822u")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.728025, 0.909074, 0.783386, 1)

[node name="TilingBackground" type="TextureRect" parent="Root"]
material = SubResource("ShaderMaterial_onoh3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2odix")
expand_mode = 1
stretch_mode = 1

[node name="SadTitle" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -229.0
offset_top = 30.0
offset_right = 230.0
offset_bottom = 79.0
grow_horizontal = 2
text = "YOU WENT SAD!"
label_settings = SubResource("LabelSettings_aen5p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefeatedBy" type="Label" parent="Root"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -229.0
offset_top = 76.0
offset_right = 230.0
offset_bottom = 125.0
grow_horizontal = 2
text = "Defeated by Something"
label_settings = SubResource("LabelSettings_rhk66")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemTitle" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -123.0
offset_right = 230.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
text = "Your Items:"
label_settings = SubResource("LabelSettings_vmbai")
horizontal_alignment = 1

[node name="ItemDisplay" parent="Root" instance=ExtResource("3_7bjh0")]
custom_minimum_size = Vector2(128, 68)
layout_mode = 1
offset_top = -68.0

[node name="NodeViewer" parent="Root" instance=ExtResource("4_7ldo3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -391.0
offset_top = -293.0
offset_right = 9.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_7le1w")
expand_mode = 1

[node name="Buttons" type="VBoxContainer" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -145.0
offset_right = 380.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(152, 126)
theme_override_constants/separation = -12
alignment = 1

[node name="TryAgain" parent="Root/Buttons" instance=ExtResource("5_r1k5q")]
material = SubResource("ShaderMaterial_cgcah")
custom_minimum_size = Vector2(230, 100)
layout_mode = 2
texture_normal = ExtResource("7_n78l6")
texture_pressed = ExtResource("8_h5jcy")
texture_hover = ExtResource("9_b6wx8")
texture_disabled = ExtResource("8_h5jcy")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Try Again"

[node name="Quit" parent="Root/Buttons" instance=ExtResource("5_r1k5q")]
custom_minimum_size = Vector2(230, 100)
layout_mode = 2
texture_normal = ExtResource("7_n78l6")
texture_pressed = ExtResource("8_h5jcy")
texture_hover = ExtResource("9_b6wx8")
texture_disabled = ExtResource("8_h5jcy")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Back to Menu"

[connection signal="pressed" from="Root/Buttons/TryAgain" to="." method="play_again"]
[connection signal="pressed" from="Root/Buttons/Quit" to="." method="exit"]
